--- a/src/Pages/SearchedBuses/Buses.scss
+++ b/src/Pages/SearchedBuses/Buses.scss
@@ -1,6 +1,25 @@
 .mainContainer{
-    height: 100vh;
-    width: 100%;
-    border: 1px solid black;
-    position: absolute;
+    height: 100%;
+    margin: 40px;
+    margin-top: 6%;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+
+    .card{
+        display: flex;
+        flex-direction: column;
+        gap: 35px;
+
+        .noBus{
+            
+            align-items: center;
+            margin: 50px;
+            
+            p{
+                font-size: 50px;
+            }
+        }
+    }
 }
