Authorization in frontend done

--- a/src/Components/BusSeat/BusSeat.scss
+++ b/src/Components/BusSeat/BusSeat.scss
@@ -11,6 +11,7 @@
     cursor: pointer;
     border: 2px solid #ccc;
     border-radius: 5px;
+    transition: linear all 0.3s;
   }
   
   .bus-seat.selected {
