--- a/src/Pages/SearchedBuses/Buses.scss
+++ b/src/Pages/SearchedBuses/Buses.scss
@@ -1,6 +1,6 @@
 .mainContainer{
     height: 100%;
-    margin: 40px;
+    // margin: 40px;
     margin-top: 6%;
     padding: 15px;
     display: flex;
@@ -10,7 +10,7 @@
     .card{
         display: flex;
         flex-direction: column;
-        gap: 35px;
+        gap: 30px;
 
         .noBus{
             
