--- a/src/Components/Card/Card.scss
+++ b/src/Components/Card/Card.scss
@@ -1,9 +1,14 @@
 .mainCardContainer{
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    border: 1px solid red;
+    gap: 30px;
+    border: 1px solid black;
     padding: 20px;
+    transition: linear all 0.4s;
+
+    &:hover{
+        box-shadow: 1px 1px 10px 0px rgb(24, 23, 23);
+    }
 
     .upperCard{
         display: flex;
@@ -117,6 +122,11 @@
             font-weight: 600;
             border-radius: 20px;
             cursor: pointer;
+            transition: linear all 0.25s;
+
+            &:hover{
+                box-shadow: 1px 1px 10px 0px rgb(156, 1, 1);
+            }
         }
     }
 
