--- a/src/Components/ShowSeat/Seat.scss
+++ b/src/Components/ShowSeat/Seat.scss
@@ -25,6 +25,11 @@
         cursor: pointer;
         border-radius: 10px;
         font-weight: bold;
+        transition: linear all 0.25s;
+
+        &:hover{
+            box-shadow: 1px 1px 10px 0px rgb(89, 89, 89);
+        }
     }
 }
 
@@ -37,10 +42,11 @@
     right: 0;
     width: 400px;
     height: 100%;
-    background: #eaeaea;
+    background: #f2f2f2;
     padding: 20px;
     box-sizing: border-box;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 3px 3px 25px 0px rgba(0, 0, 0, 0.8);
+    
 
     label{
         font-size: 18px;
