--- a/src/Components/Trending/Trending.scss
+++ b/src/Components/Trending/Trending.scss
@@ -25,9 +25,11 @@
             padding: 8px 20px;
             border-radius: 15px;
             cursor: pointer;
+            transition: linear all 0.4s;
 
             &:hover{
-                background-color: #d7d7d7;
+                box-shadow: 1px 1px 10px 0px rgb(24, 23, 23);
+                background-color: #c8c8c8;
             }
         }
     }
