--- a/src/Pages/Login/Login.scss
+++ b/src/Pages/Login/Login.scss
@@ -62,6 +62,11 @@
             font-weight: bold;
             color: #FFF;
             cursor: pointer;
+            transition: linear all 0.25s;
+
+            &:hover{
+                box-shadow: 1px 1px 10px 0px rgb(24, 23, 23);
+            }
         }
 
         .register{
