--- a/src/index.scss
+++ b/src/index.scss
@@ -3,3 +3,16 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+:root{
+    --hover-color: rgb(237, 237, 237);
+    --background-color: #FFF;
+    --cityEscape-color: rgb(237, 236, 236);
+    --rentalText-color: #1D1D1D;
+    --black-color: #000;
+    --light-color: #9F9FA8;
+    --footerBack-color: #f7f7f7;
+    --buttonBack-color: #FFF;
+
+    
+}
